  (Ignacio Vera)

* GITHUB#12592: Add RandomAccessInput#length method to the RandomAccessInput interface. In addition deprecate
  ByteBuffersDataInput#size in favour of this new method. (Ignacio Vera)


New Features
---------------------
(No changes)

Improvements
---------------------
* GITHUB#12574: Make TaskExecutor public so that it can be retrieved from the searcher and used
  outside of the o.a.l.search package (Luca Cavanna)

* GITHUB#12603: Simplify the TaskExecutor API by exposing a single invokeAll method that takes a
  collection of callables, executes them and returns their results  (Luca Cavanna)

* GITHUB#12606: Create a TaskExecutor when an executor is not provided to the IndexSearcher, in
  order to simplify consumer's code (Luca Cavanna)

Optimizations
---------------------
* GITHUB#12183: Make TermStates#build concurrent. (Shubham Chaudhary)

* GITHUB#12573: Use radix sort to speed up the sorting of deleted terms. (Guo Feng)

* GITHUB#12382: Faster top-level conjunctions on term queries when sorting by
  descending score. (Adrien Grand)
  
* GITHUB#12591: Use stable radix sort to speed up the sorting of update terms. (Guo Feng)

* GITHUB#12604: Estimate the block size of FST BytesStore in BlockTreeTermsWriter
  to reduce GC load during indexing. (Guo Feng)

Changes in runtime behavior
---------------------

* GITHUB#12569: Prevent concurrent tasks from parallelizing execution further which could cause deadlock
  (Luca Cavanna)

Bug Fixes
---------------------

* GITHUB#12614: Make LRUQueryCache respect Accountable queries on eviction and consistency check
  (Grigoriy Troitskiy)

* GITHUB#11556: HTMLStripCharFilter fails on '>' or '<' characters in attribute values. (Elliot Lin)

Build
---------------------

* GITHUB#12612: Upgrade forbiddenapis to version 3.6 and ASM for APIJAR extraction to 9.6.  (Uwe Schindler)

Other
---------------------
(No changes)

======================== Lucene 9.8.0 =======================

API Changes